--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@casl/ability": "6.5.0",
     "@casl/vue": "2.2.1",
+    "@element-plus/icons-vue": "2.1.0",
     "@floating-ui/dom": "1.2.7",
     "@tabler/icons": "2.17.0",
     "@vueuse/core": "10.1.0",
@@ -22,6 +23,8 @@
     "axios": "1.4.0",
     "axios-mock-adapter": "1.21.4",
     "chart.js": "4.3.0",
+    "drawflow": "0.0.59",
+    "element-plus": "2.3.4",
     "jwt-decode": "3.1.2",
     "pinia": "2.0.35",
     "prismjs": "1.29.0",
@@ -37,11 +40,7 @@
     "vue3-apexcharts": "1.4.1",
     "vue3-perfect-scrollbar": "1.6.1",
     "vuetify": "3.2.1",
-    "webfontloader": "1.6.28",
-    "@types/drawflow": "0.0.5",
-    "drawflow": "0.0.59",
-    "element-plus": "2.3.4",
-    "@element-plus/icons-vue": "2.1.0"
+    "webfontloader": "1.6.28"
   },
   "devDependencies": {
     "@antfu/eslint-config-vue": "0.38.5",
@@ -56,6 +55,7 @@
     "@iconify/tools": "2.2.6",
     "@iconify/vue": "4.1.1",
     "@intlify/unplugin-vue-i18n": "0.10.0",
+    "@types/drawflow": "^0.0.5",
     "@types/node": "18.16.3",
     "@types/webfontloader": "1.6.35",
     "@typescript-eslint/eslint-plugin": "5.59.1",
