First working API

--- a/neena/.env
+++ b/neena/.env
@@ -19,7 +19,6 @@ BACKEND_CORS_ORIGINS=["http://localhost", "http://localhost:4200", "http://local
 BACKEND_PRE_START_PATH=/app/prestart.sh
 PROJECT_NAME=Neena
 SECRET_KEY=Land100!
-TOTP_SECRET_KEY=Land100!
 FIRST_SUPERUSER=admin@neena.io
 FIRST_SUPERUSER_PASSWORD=Land100!
 SMTP_TLS=True
@@ -31,9 +30,9 @@ EMAILS_FROM_EMAIL=info@neena.io
 EMAILS_FROM_NAME=Symona Adaro
 EMAILS_TO_EMAIL=info@neena.io
 
-USERS_OPEN_REGISTRATION=True
+OPEN_AI_API_KEY=
 
-SENTRY_DSN=
+USERS_OPEN_REGISTRATION=True
 
 # Flower
 FLOWER_BASIC_AUTH=admin:Land100!
@@ -48,10 +47,3 @@ POSTGRES_DB=app
 PGADMIN_LISTEN_PORT=5050
 PGADMIN_DEFAULT_EMAIL=admin@neena.io
 PGADMIN_DEFAULT_PASSWORD=Land100!
-
-# Neo4j
-NEO4J_SERVER=neo4j
-NEO4J_USERNAME=neo4j
-NEO4J_PASSWORD=changethis
-NEO4J_AUTH=neo4j:changethis
-NEO4J_BOLT=bolt
