Fix missing Sentry env var issue

--- a/neena/.env
+++ b/neena/.env
@@ -30,7 +30,8 @@ EMAILS_FROM_EMAIL=info@neena.io
 EMAILS_FROM_NAME=Symona Adaro
 EMAILS_TO_EMAIL=info@neena.io
 
-OPEN_AI_API_KEY=
+OPEN_AI_API_KEY= # Will at some point be implemented
+SENTRY_DSN= # Will at some point be implemented
 
 USERS_OPEN_REGISTRATION=True
 
