--- a/neena/docker-compose.yml
+++ b/neena/docker-compose.yml
@@ -169,6 +169,8 @@ services:
         - traefik.constraint-label-stack=${TRAEFIK_TAG?Variable not set}
         - traefik.http.routers.${STACK_NAME?Variable not set}-backend-http.rule=PathPrefix(`/api`) || PathPrefix(`/docs`) || PathPrefix(`/redoc`)
         - traefik.http.services.${STACK_NAME?Variable not set}-backend.loadbalancer.server.port=80
+    volumes:
+      - ./backend/app/alembic:/app/alembic
 
   celeryworker:
     image: "${DOCKER_IMAGE_CELERYWORKER?Variable not set}:${TAG-latest}"
@@ -216,6 +218,7 @@ services:
 
 volumes:
   app-db-data:
+
 
 networks:
   traefik-public:
