--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "dayjs": "^1.11.9",
     "drawflow": "0.0.59",
     "element-plus": "2.3.4",
+    "highlight.js": "^11.8.0",
     "jwt-decode": "3.1.2",
     "pinia": "2.0.35",
     "prismjs": "1.29.0",
