--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,13 +12,9 @@
     "postinstall": "npm run build:icons"
   },
   "dependencies": {
-    "@casl/ability": "6.5.0",
-    "@casl/vue": "2.2.1",
     "@element-plus/icons-vue": "2.1.0",
     "@floating-ui/dom": "1.2.7",
     "@tabler/icons": "2.17.0",
-    "@vueuse/core": "10.1.0",
-    "@vueuse/math": "10.1.0",
     "apexcharts-clevision": "3.28.5",
     "axios": "1.4.0",
     "axios-mock-adapter": "1.21.4",
@@ -27,7 +23,6 @@
     "drawflow": "0.0.59",
     "element-plus": "2.3.4",
     "highlight.js": "^11.8.0",
-    "jwt-decode": "3.1.2",
     "pinia": "2.0.35",
     "prismjs": "1.29.0",
     "roboto-fontface": "0.10.0",
@@ -46,12 +41,6 @@
   },
   "devDependencies": {
     "@antfu/eslint-config-vue": "0.38.5",
-    "@fullcalendar/core": "6.1.6",
-    "@fullcalendar/daygrid": "6.1.6",
-    "@fullcalendar/interaction": "6.1.6",
-    "@fullcalendar/list": "6.1.6",
-    "@fullcalendar/timegrid": "6.1.6",
-    "@fullcalendar/vue3": "6.1.6",
     "@iconify-json/fa": "1.1.4",
     "@iconify-json/tabler": "1.1.74",
     "@iconify/tools": "2.2.6",
@@ -82,7 +71,7 @@
     "typescript": "5.0.4",
     "unplugin-auto-import": "0.15.3",
     "unplugin-vue-components": "0.24.1",
-    "vite": "4.3.3",
+    "vite": "^4.4.7",
     "vite-plugin-pages": "0.29.0",
     "vite-plugin-vue-layouts": "0.8.0",
     "vite-plugin-vuetify": "1.0.2",
