Progress on flow run, execution logic and fix flow_request API

--- a/neena/.env
+++ b/neena/.env
@@ -31,7 +31,7 @@ EMAILS_FROM_NAME=Symona Adaro
 EMAILS_TO_EMAIL=info@neena.io
 
 OPEN_AI_API_KEY= # Will at some point be implemented
-SENTRY_DSN= # Will at some point be implemented
+SENTRY_DSN=something # Will at some point be implemented
 
 USERS_OPEN_REGISTRATION=True
 
