--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,54 +10,75 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+
+  terraform:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v2
+    - name: Checkout code
+      uses: actions/checkout@v2
 
-      - name: Set up Python version
-        uses: actions/setup-python@v1
-        with:
-          python-version: '3.10'
+    - name: Setup Terraform
+      uses: hashicorp/setup-terraform@v1
 
-      - name: Create and start virtual environment
-        run: |
-          python -m venv venv
-          source venv/bin/activate
-      
-      - name: Install dependencies
-        run: pip install -r requirements.txt
-        working-directory: 'src'
+    - name: Terraform Init
+      run: terraform init
+
+    - name: Terraform Apply
+      run: terraform apply -auto-approve
+      env:
+        ARM_CLIENT_ID: ${{ secrets.DEPLOYMENT_SP_CLIENT_ID }}
+        ARM_CLIENT_SECRET: ${{ secrets.DEPLOYMENT_SP_SECRET }}
+        ARM_SUBSCRIPTION_ID: ${{ secrets.DEPLOYMENT_SUBSCRIPTION_ID }}
+        ARM_TENANT_ID: ${{ secrets.DEPLOYMENT_SP_TENANT_ID }}
         
-      # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
+  # build:
+  #   runs-on: ubuntu-latest
+
+  #   steps:
+  #     - uses: actions/checkout@v2
+
+  #     - name: Set up Python version
+  #       uses: actions/setup-python@v1
+  #       with:
+  #         python-version: '3.10'
+
+  #     - name: Create and start virtual environment
+  #       run: |
+  #         python -m venv venv
+  #         source venv/bin/activate
       
-      - name: Upload artifact for deployment jobs
-        uses: actions/upload-artifact@v2
-        with:
-          name: python-app
-          path: |
-            src
-            !venv/
+  #     - name: Install dependencies
+  #       run: pip install -r requirements.txt
+  #       working-directory: 'src'
+        
+  #     # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
+      
+  #     - name: Upload artifact for deployment jobs
+  #       uses: actions/upload-artifact@v2
+  #       with:
+  #         name: python-app
+  #         path: |
+  #           src
+  #           !venv/
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+  # deploy:
+  #   runs-on: ubuntu-latest
+  #   needs: build
+  #   environment:
+  #     name: 'Production'
+  #     url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
-    steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v2
-        with:
-          name: python-app
-          path: .
+  #   steps:
+  #     - name: Download artifact from build job
+  #       uses: actions/download-artifact@v2
+  #       with:
+  #         name: python-app
+  #         path: .
           
-      - name: 'Deploy to Azure Web App'
-        uses: azure/webapps-deploy@v2
-        id: deploy-to-webapp
-        with:
-          app-name: 'mywebapp-sample'
-          slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_D59AF6F7FC3548B0B22238403786E552 }}
+  #     - name: 'Deploy to Azure Web App'
+  #       uses: azure/webapps-deploy@v2
+  #       id: deploy-to-webapp
+  #       with:
+  #         app-name: 'mywebapp-sample'
+  #         slot-name: 'Production'
+  #         publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_D59AF6F7FC3548B0B22238403786E552 }}
