--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
   terraform:
     runs-on: ubuntu-latest
     environment: 
-      name: production
+      name: dev
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
