--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,6 +39,7 @@ jobs:
 
     - name: Terraform Init
       run: terraform init
+      working-directory: infra
 
     - name: Terraform Apply
       run: terraform apply -auto-approve
@@ -48,6 +49,7 @@ jobs:
         ARM_SUBSCRIPTION_ID: ${{ secrets.SUBSCRIPTION_ID }}
         ARM_TENANT_ID: ${{ secrets.TENANT_ID }}
         ARM_ACCOUNT_KEY: ${{ steps.get_storage_key.outputs.value }}
+      working-directory: infra
         
   # build:
   #   runs-on: ubuntu-latest
