--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,7 @@ jobs:
       working-directory: infra
 
     - name: Terraform Apply
-      run: terraform apply -auto-approve -var-file="infra/dev.terraform.tfvars"
+      run: terraform apply -auto-approve -var-file="dev.tfvars"
       env:
         ARM_CLIENT_ID: ${{ secrets.DEPLOYMENT_SP_CLIENT_ID }}
         ARM_CLIENT_SECRET: ${{ secrets.DEPLOYMENT_SP_CLIENT_SECRET }}
