--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,6 +49,9 @@ jobs:
         ARM_SUBSCRIPTION_ID: ${{ secrets.SUBSCRIPTION_ID }}
         ARM_TENANT_ID: ${{ secrets.TENANT_ID }}
         ARM_ACCOUNT_KEY: ${{ steps.get_storage_key.outputs.value }}
+        TF_VAR_psql_admin_username: ${{ secrets.PSQL_ADMIN_USERNAME }}
+        TF_VAR_psql_admin_password: ${{ secrets.PSQL_ADMIN_PASSWORD }}
+
       working-directory: infra
         
   # build:
