--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,11 +34,11 @@ jobs:
       run: |
         terraform apply -auto-approve -var-file="dev.tfvars"
         echo "service_app_name=$(terraform output -raw service_app_name)" >> $GITHUB_ENV
-        echo "function_app_name=$(terraform output -raw function_app_name)" >> $GITHUB_ENV
-        echo "postgresql_server_name=$(terraform output -raw postgresql_server_name)" >> $GITHUB_ENV
-        echo "postgresql_database_name=$(terraform output -raw postgresql_database_name)" >> $GITHUB_ENV
-        echo "resource_group_name=$(terraform output -raw resource_group_name)" >> $GITHUB_ENV
-        echo "static_website_endpoint=$(terraform output -raw static_website_endpoint)" >> $GITHUB_ENV
+        # echo "function_app_name=$(terraform output -raw function_app_name)" >> $GITHUB_ENV
+        # echo "postgresql_server_name=$(terraform output -raw postgresql_server_name)" >> $GITHUB_ENV
+        # echo "postgresql_database_name=$(terraform output -raw postgresql_database_name)" >> $GITHUB_ENV
+        # echo "resource_group_name=$(terraform output -raw resource_group_name)" >> $GITHUB_ENV
+        # echo "static_website_endpoint=$(terraform output -raw static_website_endpoint)" >> $GITHUB_ENV
       env:
         ARM_CLIENT_ID: ${{ secrets.DEPLOYMENT_SP_CLIENT_ID }}
         ARM_CLIENT_SECRET: ${{ secrets.DEPLOYMENT_SP_CLIENT_SECRET }}
