--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -82,6 +82,7 @@ jobs:
       run: |
         pip install poetry
         poetry install
+      working-directory: neena/backend/app
       
 
     - name: Run Alembic Migrations
@@ -92,37 +93,8 @@ jobs:
         POSTGRES_DB: ${{ steps.terraform_apply.outputs.postgresql_database_name }}
       run: |
         poetry run alembic upgrade head
+      working-directory: neena/backend/app
 
-    
-  # build:
-  #   runs-on: ubuntu-latest
-
-  #   steps:
-  #     - uses: actions/checkout@v2
-
-  #     - name: Set up Python version
-  #       uses: actions/setup-python@v1
-  #       with:
-  #         python-version: '3.10'
-
-  #     - name: Create and start virtual environment
-  #       run: |
-  #         python -m venv venv
-  #         source venv/bin/activate
-      
-  #     - name: Install dependencies
-  #       run: pip install -r requirements.txt
-  #       working-directory: 'src'
-        
-  #     # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
-      
-  #     - name: Upload artifact for deployment jobs
-  #       uses: actions/upload-artifact@v2
-  #       with:
-  #         name: python-app
-  #         path: |
-  #           src
-  #           !venv/
 
   # deploy:
   #   runs-on: ubuntu-latest
