--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -89,8 +89,8 @@ jobs:
       env:
         POSTGRES_USER: ${{ secrets.PSQL_ADMIN_USERNAME }}
         POSTGRES_PASSWORD: ${{ secrets.PSQL_ADMIN_PASSWORD }}
-        POSTGRES_SERVER: ${{ steps.terraform_apply.outputs.postgresql_server_name }}
-        POSTGRES_DB: ${{ steps.terraform_apply.outputs.postgresql_database_name }}
+        POSTGRES_SERVER: ${{ env.postgresql_server_name }}
+        POSTGRES_DB: ${{ env.postgresql_database_name }}
       run: |
         poetry run alembic upgrade head
       working-directory: neena/backend/app
