--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -88,7 +88,7 @@ jobs:
 
     - name: Run Alembic Migrations
       env:
-        POSTGRES_USER: ${{ secrets.PSQL_ADMIN_USERNAME }}
+        POSTGRES_USER: "${{ secrets.PSQL_ADMIN_USERNAME }}@${{ env.postgresql_server_fqdn }}"
         POSTGRES_PASSWORD: ${{ secrets.PSQL_ADMIN_PASSWORD }}
         POSTGRES_SERVER: ${{ env.postgresql_server_fqdn }}
         POSTGRES_DB: ${{ env.postgresql_database_name }}
