--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,28 +1,28 @@
 [tool.poetry]
-name = "app"
+name = "neena-core"
 version = "0.1.0"
-description = ""
-authors = ["Admin <admin@example.com>"]
+description = "Neena Core project"
+authors = ["Rauf <rauf@neena.io>"]
 
 [tool.poetry.dependencies]
 python = "^3.9.4"
-inboard = {version = "^0.37.0", extras = ["fastapi"]}
+inboard = "^0.37.0"
 python-multipart = "^0.0.5"
-email-validator = "^1.3.0"
+fastapi = "^0.89.0"
 requests = "^2.28.1"
 celery = "^5.2.7"
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 tenacity = "^8.1.0"
-emails = "^0.6.0"
 raven = "^6.10.0"
-jinja2 = "^3.1.2"
 alembic = "^1.8.1"
+email-validator = "^1.3.0"
 sqlalchemy = "^2.0"
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 httpx = "^0.23.1"
 psycopg2-binary = "^2.9.5"
 setuptools = "^65.6.3"
 argon2-cffi = "^21.3.0"
+attrs = "^22.0.0"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.991"
