--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,8 +15,6 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-
-          
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v1
 
@@ -47,6 +45,8 @@ jobs:
         ARM_TENANT_ID: ${{ secrets.TENANT_ID }}
         TF_VAR_psql_admin_username: ${{ secrets.PSQL_ADMIN_USERNAME }}
         TF_VAR_psql_admin_password: ${{ secrets.PSQL_ADMIN_PASSWORD }}
+        TF_VAR_first_superuser: ${{ secrets.FIRST_SUPERUSER }}
+        TF_VAR_first_superuser_password: ${{ secrets.FIRST_SUPERUSER_PASSWORD }}
       working-directory: infra
       
     - name: Login to Azure
