--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "destr": "^2.0.2",
     "drawflow": "^0.0.59",
     "element-plus": "^2.4.4",
+    "flatpickr": "^4.6.13",
     "highlight.js": "^11.9.0",
     "jwt-decode": "^3.1.2",
     "mapbox-gl": "2.15.0",
