--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -79,8 +79,8 @@ jobs:
     - name: Deploy to Vue distribution Azure Blob Storage
       run: |
         az storage blob upload-batch \
-          -s ./frontend/dist \ # Adjust this path to your build artifacts directory
-          -d $web \ # Destination in Azure Blob Storage
+          -s ./frontend/dist \
+          -d $web \ 
           --account-name ${{ env.static_website_endpoint }}
 
     - name: Get Public IP
