--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -84,10 +84,11 @@ jobs:
 
     - name: Deploy to Vue distribution Azure Blob Storage
       run: |
+        cd ./frontend
         az storage blob upload-batch \
-          -s ./frontend/dist \
-          -d $web \ 
-          --connection-string ${{ env.static_website_blob_connection_string }}
+          -s dist \
+          -d "$web" \ 
+          --connection-string "${{ env.static_website_blob_connection_string }}"
 
     - name: Get Public IP
       run: echo "RUNNER_IP=$(curl -s ifconfig.me)" >> $GITHUB_ENV
