--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -23,6 +23,8 @@ psycopg2-binary = "^2.9.5"
 setuptools = "^65.6.3"
 argon2-cffi = "^21.3.0"
 attrs = "^22.0.0"
+opencensus-ext-azure = "^1.1.13"
+fastapi-auth0 = "^0.5.0"
 
 
 [tool.poetry.dev-dependencies]
