add auth0 namespace tf var parse

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,6 +51,7 @@ jobs:
         TF_VAR_first_superuser_auth_id: ${{ secrets.VITE_APP_AUTH0_AUDIENCE }}
         TF_VAR_auth0_api_identifier: ${{ secrets.AUTH0_API_IDENTIFIER }}
         TF_VAR_auth0_domain: ${{ secrets.VITE_APP_AUTH0_DOMAIN }}
+        TF_VAR_auth0_rule_namespace: ${{ secrets.AUTH0_RULE_NAMESPACE }}
         TF_VAR_auth0_client_id: ${{ secrets.VITE_APP_AUTH0_CLIENT_ID }}
 
       working-directory: infra
