--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -87,7 +87,7 @@ jobs:
         VITE_APP_AUTH0_CLIENT_ID: ${{ secrets.VITE_APP_AUTH0_CLIENT_ID }}
         VITE_APP_AUTH0_AUDIENCE: ${{ secrets.VITE_APP_AUTH0_AUDIENCE }}
         VITE_APP_BASE_URL: /
-        VITE_APP_API_URL: ${{ env.service_app_base_url }}
+        VITE_API_BASE_URL: ${{ env.service_app_base_url }}
 
     - name: Deploy to Vue distribution Azure Blob Storage
       run: |
