--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -25,6 +25,8 @@ argon2-cffi = "^21.3.0"
 attrs = "^22.0.0"
 opencensus-ext-azure = "^1.1.13"
 fastapi-auth0 = "^0.5.0"
+azure-identity = "^1.15.0"
+azure-keyvault-secrets = "^4.7.0"
 
 
 [tool.poetry.dev-dependencies]
