--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -8,14 +8,14 @@ authors = ["Rauf <rauf@neena.io>"]
 python = "^3.9.4"
 inboard = "^0.37.0"
 python-multipart = "^0.0.5"
-fastapi = "^0.89.0"
+fastapi = "^0.109.2"
 requests = "^2.28.1"
 celery = "^5.2.7"
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 tenacity = "^8.1.0"
 raven = "^6.10.0"
 alembic = "^1.8.1"
-email-validator = "^1.3.0"
+email-validator = "^2.1.0.post1"
 sqlalchemy = "^2.0"
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 httpx = "^0.23.1"
@@ -27,6 +27,9 @@ opencensus-ext-azure = "^1.1.13"
 fastapi-auth0 = "^0.5.0"
 azure-identity = "^1.15.0"
 azure-keyvault-secrets = "^4.7.0"
+pyyaml = "^6.0.1"
+pydantic = "^2.6.1"
+pydantic-settings = "^2.2.1"
 
 
 [tool.poetry.dev-dependencies]
