--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,19 +26,17 @@ jobs:
         ARM_SUBSCRIPTION_ID: ${{ secrets.SUBSCRIPTION_ID }}
         ARM_TENANT_ID: ${{ secrets.TENANT_ID }}
 
-    - name: Terraform Apply
-      id: terraform_apply
+    - name: Terraform Apply excluding PostgreSQL
       run: |
-        terraform apply -auto-approve -var-file="dev.tfvars"
+        terraform apply -auto-approve -var-file="dev.tfvars" -target=module.application_insights -target=module.function_app -target=module.key_vault -target=module.log_analytics_workspace -target=module.service_app -target=module.service_principal -target=module.static_website
         echo "service_app_name=$(terraform-bin output -raw service_app_name)" >> $GITHUB_ENV
         echo "function_app_name=$(terraform-bin output -raw function_app_name)" >> $GITHUB_ENV
-        echo "postgresql_server_name=$(terraform-bin output -raw postgresql_server_name)" >> $GITHUB_ENV
-        echo "postgresql_database_name=$(terraform-bin output -raw postgresql_database_name)" >> $GITHUB_ENV
         echo "resource_group_name=$(terraform-bin output -raw resource_group_name)" >> $GITHUB_ENV
         echo "static_website_endpoint=$(terraform-bin output -raw static_website_endpoint)" >> $GITHUB_ENV
         echo "postgresql_server_fqdn=$(terraform-bin output -raw postgresql_server_fqdn)" >> $GITHUB_ENV
         echo "static_website_blob_connection_string=$(terraform-bin output -raw static_website_blob_connection_string)" >> $GITHUB_ENV
         echo "service_app_base_url=$(terraform-bin output -raw service_app_base_url)" >> $GITHUB_ENV
+      working-directory: infra
       env:
         ARM_CLIENT_ID: ${{ secrets.DEPLOYMENT_SP_CLIENT_ID }}
         ARM_CLIENT_SECRET: ${{ secrets.DEPLOYMENT_SP_CLIENT_SECRET }}
@@ -54,7 +52,27 @@ jobs:
         TF_VAR_auth0_client_id: ${{ secrets.VITE_APP_AUTH0_CLIENT_ID }}
         TF_VAR_trello_api_key: ${{ vars.TRELLO_API_KEY }}
 
+      
+    - name: Terraform Apply for PostgreSQL
+      run: |
+        terraform apply -auto-approve -var-file="dev.tfvars" -target=module.postgresql
+        echo "postgresql_server_name=$(terraform-bin output -raw postgresql_server_name)" >> $GITHUB_ENV
+        echo "postgresql_database_name=$(terraform-bin output -raw postgresql_database_name)" >> $GITHUB_ENV
       working-directory: infra
+      env:
+        ARM_CLIENT_ID: ${{ secrets.DEPLOYMENT_SP_CLIENT_ID }}
+        ARM_CLIENT_SECRET: ${{ secrets.DEPLOYMENT_SP_CLIENT_SECRET }}
+        ARM_SUBSCRIPTION_ID: ${{ secrets.SUBSCRIPTION_ID }}
+        ARM_TENANT_ID: ${{ secrets.TENANT_ID }}
+        TF_VAR_psql_admin_username: ${{ secrets.PSQL_ADMIN_USERNAME }}
+        TF_VAR_psql_admin_password: ${{ secrets.PSQL_ADMIN_PASSWORD }}
+        TF_VAR_first_superuser: ${{ secrets.FIRST_SUPERUSER }}
+        TF_VAR_first_superuser_auth_id: ${{ secrets.FIRST_SUPERUSER_AUTH_ID }}
+        TF_VAR_auth0_api_identifier: ${{ secrets.AUTH0_API_IDENTIFIER }}
+        TF_VAR_auth0_domain: ${{ secrets.VITE_APP_AUTH0_DOMAIN }}
+        TF_VAR_auth0_rule_namespace: ${{ secrets.AUTH0_RULE_NAMESPACE }}
+        TF_VAR_auth0_client_id: ${{ secrets.VITE_APP_AUTH0_CLIENT_ID }}
+        TF_VAR_trello_api_key: ${{ vars.TRELLO_API_KEY }}
 
     - name: Login to Azure
       uses: azure/login@v1
