--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -38,6 +38,10 @@ pytest = "^7.2.0"
 sqlalchemy2-stubs = "^0.0.2a29"
 pytest-cov = "^4.0.0"
 
+[tool.poetry.group.dev.dependencies]
+sqlalchemy-stubs = "^0.4"
+respx = "^0.20.2"
+
 [tool.isort]
 multi_line_output = 3
 include_trailing_comma = true
