--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,6 +53,7 @@ jobs:
         TF_VAR_auth0_rule_namespace: ${{ secrets.AUTH0_RULE_NAMESPACE }}
         TF_VAR_auth0_client_id: ${{ secrets.VITE_APP_AUTH0_CLIENT_ID }}
         TF_VAR_trello_api_key: ${{ vars.TRELLO_API_KEY }}
+        TF_VAR_openai_api_key: ${{ secrets.OPENAI_API_KEY }}
 
       working-directory: infra
 
