--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -94,6 +94,7 @@ jobs:
       uses: Azure/static-web-apps-deploy@v1
       with:
         action: "upload"
+        azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
         repo_token: ${{ secrets.GITHUB_TOKEN }}
         app_location: "/frontend" 
         app_artifact_location: "/dist"
