--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,47 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
+    - name: Login to Azure
+      uses: azure/login@v1
+      with:
+        creds: |
+          {
+            "clientId": "${{ secrets.DEPLOYMENT_SP_CLIENT_ID }}",
+            "clientSecret": "${{ secrets.DEPLOYMENT_SP_CLIENT_SECRET }}",
+            "subscriptionId": "${{ secrets.SUBSCRIPTION_ID }}",
+            "tenantId": "${{ secrets.TENANT_ID }}"
+          }
+
+    - name: Set up Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: '20.1.0' # Set this to your Node.js version
+        
+    - name: Install pnpm
+      run: npm install -g pnpm
+
+    - name: Build Vue Project
+      run: |
+        npm install -g tsx
+        pnpm install ts-node
+        pnpm install tsx
+        pnpm install
+        pnpm run build
+      working-directory: ./frontend
+      env: 
+        VITE_APP_AUTH0_DOMAIN: ${{ secrets.VITE_APP_AUTH0_DOMAIN }}
+        VITE_APP_AUTH0_CLIENT_ID: ${{ secrets.VITE_APP_AUTH0_CLIENT_ID }}
+        VITE_APP_AUTH0_AUDIENCE: ${{ secrets.VITE_APP_AUTH0_AUDIENCE }}
+        VITE_APP_BASE_URL: /
+        VITE_API_BASE_URL: https://${{ env.service_app_base_url }}
+
+    - name: Deploy tp Azure Static Web Apps
+      run: |
+        npm install -g @azure/static-web-apps-cli
+        cd dist/
+        swa deploy -d ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
+      working-directory: frontend
+      
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v1
 
@@ -56,39 +97,6 @@ jobs:
         TF_VAR_openai_api_key: ${{ secrets.OPENAI_API_KEY }}
 
       working-directory: infra
-
-    - name: Login to Azure
-      uses: azure/login@v1
-      with:
-        creds: |
-          {
-            "clientId": "${{ secrets.DEPLOYMENT_SP_CLIENT_ID }}",
-            "clientSecret": "${{ secrets.DEPLOYMENT_SP_CLIENT_SECRET }}",
-            "subscriptionId": "${{ secrets.SUBSCRIPTION_ID }}",
-            "tenantId": "${{ secrets.TENANT_ID }}"
-          }
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '20.1.0' # Set this to your Node.js version
-        
-    - name: Install pnpm
-      run: npm install -g pnpm
-
-    - name: Build Vue Project
-      run: |
-        npm install -g tsx
-        pnpm install ts-node
-        pnpm install tsx
-        pnpm install
-        pnpm run build
-      working-directory: ./frontend
-      env: 
-        VITE_APP_AUTH0_DOMAIN: ${{ secrets.VITE_APP_AUTH0_DOMAIN }}
-        VITE_APP_AUTH0_CLIENT_ID: ${{ secrets.VITE_APP_AUTH0_CLIENT_ID }}
-        VITE_APP_AUTH0_AUDIENCE: ${{ secrets.VITE_APP_AUTH0_AUDIENCE }}
-        VITE_APP_BASE_URL: /
-        VITE_API_BASE_URL: https://${{ env.service_app_base_url }}
           
     - name: Deploy to Azure Static Web Apps
       uses: Azure/static-web-apps-deploy@v1
