--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,8 +51,7 @@ jobs:
     - name: Deploy tp Azure Static Web Apps
       run: |
         npm install -g @azure/static-web-apps-cli
-        cd dist/
-        swa deploy -d ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
+        swa deploy ./dist -d ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
       working-directory: frontend
       
     - name: Setup Terraform
