fix: add terraform and github actions for adding os env var

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,6 +66,7 @@ jobs:
         TF_VAR_trello_api_key: ${{ vars.TRELLO_API_KEY }}
         TF_VAR_openai_api_key: ${{ secrets.OPENAI_API_KEY }}
         TF_VAR_domain_name: ${{ vars.DOMAIN_NAME }}
+        TF_VAR_pinecone_api_key: ${{ secrets.PINECONE_API_KEY }}
 
       working-directory: infra
 
