--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -32,6 +32,7 @@ pydantic = "^2.6.1"
 pydantic-settings = "^2.2.1"
 openai = "^1.12.0"
 instructor = "^0.6.1"
+pinecone-client = "^3.1.0"
 
 
 [tool.poetry.dev-dependencies]
