--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -96,7 +96,7 @@ jobs:
     - name: Deploy tp Azure Static Web Apps
       run: |
         npm install -g @azure/static-web-apps-cli
-        swa deploy ./dist -d ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
+        swa deploy ./dist -d ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }} --env "production"
       working-directory: frontend
 
     - name: Get Public IP
