--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -33,6 +33,7 @@ pydantic-settings = "^2.2.1"
 openai = "^1.12.0"
 instructor = "^0.6.1"
 pinecone-client = "^3.1.0"
+slack-sdk = "^3.27.1"
 
 
 [tool.poetry.dev-dependencies]
